# prombot

./: .env.example  .gitignore  PromQL_Cheat_Sheet.md  README.md  prombot.py  pyproject.toml
prombot/: rag_manager.py
test_data/: data.yaml  prom.yaml  run_prom.sh
